Fix changelog, revise newsletter spacing

--- a/src/assets/sass/protocol/components/_newsletter-form.scss
+++ b/src/assets/sass/protocol/components/_newsletter-form.scss
@@ -52,15 +52,23 @@
 
 // Form wrapper with image
 .mzp-c-newsletter {
-    margin: 0 auto $spacing-lg;
+    margin: 0 auto;
     max-width: $content-sm;
 
+    // No top padding when it's at the top of a container
+    .mzp-l-content > &:first-child {
+        padding-top: 0;
+    }
+
+    // No bottom padding when it's at the bottom of a container
+    .mzp-l-content > &:last-child {
+        padding-bottom: 0;
+    }
+
     @media #{$mq-md} {
-        & {
-            @include clearfix;
-            padding: 0 $spacing-lg;
-            max-width: none;
-        }
+        @include clearfix;
+        padding: get-theme('h-grid-md') get-theme('v-grid-lg');
+        max-width: none;
 
         .mzp-c-newsletter-image {
             @include grid-half;
@@ -75,14 +83,11 @@
         }
 
         @supports (display: grid) {
-            & {
-                @include grid-column-gap($spacing-xl);
-                display: grid;
-                grid-template-columns: repeat(2, 1fr);
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
 
-                &:after { // Remove the clearfix
-                    display: none;
-                }
+            &:after { // Remove the clearfix
+                display: none;
             }
 
             .mzp-c-newsletter-image,
@@ -104,9 +109,7 @@
     }
 
     @media #{$mq-lg} {
-        & {
-            padding: 0 $layout-xl;
-        }
+        padding: get-theme('h-grid-lg') $layout-2xl;
 
         .mzp-c-newsletter-form,
         .mzp-c-newsletter-thanks {
@@ -115,8 +118,6 @@
     }
 
     @media #{$mq-xl} {
-        & {
-            padding: 0 $layout-2xl;
-        }
+        padding: get-theme('h-grid-xl') $layout-2xl;
     }
 }
